--- a/src/public/css/admin.css
+++ b/src/public/css/admin.css
@@ -8,6 +8,14 @@
     border-radius: 10px;
     padding: 30px;
 }
+.heading__inner
+{
+  display: flex;
+  justify-content: space-between;
+}
+.heading__number{
+  
+}
 
 .inner{
     width: 90%;
