--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -22,3 +22,8 @@
 .form__group-title {
   text-align: left;
 }
+.login-form__content{
+width: 100%;
+  height: 700px;
+  background: linear-gradient(90deg, #9491eb, #f6a4ec);
+}
