--- a/src/public/css/register.css
+++ b/src/public/css/register.css
@@ -1,3 +1,8 @@
+.gradation__bg{
+width: 100%;
+  height: 700px;
+  background: linear-gradient(90deg, #9491eb, #f6a4ec);
+}
 .register-form__content {
   margin: 0 auto;
   padding: 30px 15px;
@@ -57,4 +62,13 @@
 .login__link {
   margin-top: 20px;
   text-align: center;
+}
+
+.form__input--text{
+  padding: 20px;
+    width: 600px;
+    height: 50px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin-bottom: 15px;
 }
