--- a/src/public/css/common.css
+++ b/src/public/css/common.css
@@ -1,5 +1,4 @@
 .header {
-    background: #fff;
     width: 95%;
     margin: 0 auto;
     display: flex;
@@ -20,4 +19,7 @@
     background: #b5b2b5;
     border-radius: 5px;
     border: none;
+}
+body {
+    background: linear-gradient(90deg, #9491eb, #f6a4ec);
 }
